[gd_scene load_steps=5 format=3 uid="uid://c8xpge82n4wla"]

[ext_resource type="Theme" uid="uid://bbwmmudq4y0ey" path="res://scenes/ui/game_ui_theme.tres" id="1_j2n0c"]
[ext_resource type="Texture2D" uid="uid://cf8cn732cf31r" path="res://assets/ui/basic_ui_sprites.png" id="2_6wvjy"]
[ext_resource type="Script" uid="uid://dy3ptxwo8tbsy" path="res://scenes/ui/day_and_night_controller_panel.gd" id="2_8ammb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_02n3b"]
atlas = ExtResource("2_6wvjy")
region = Rect2(261, 2, 7, 12)

[node name="DayAndNightControllerPanel" type="Control"]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_j2n0c")
script = ExtResource("2_8ammb")

[node name="DayPanel" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = -82.0
offset_bottom = 38.0
theme_type_variation = &"DayAndNightControllerPanel"

[node name="MarginContainer" type="MarginContainer" parent="DayPanel"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="Label" type="Label" parent="DayPanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"DayAndNightLabel"
text = "1年1日"

[node name="TimePanel" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = -80.0
offset_top = 43.0
offset_bottom = 81.0
theme_type_variation = &"DayAndNightControllerPanel"

[node name="MarginContainer" type="MarginContainer" parent="TimePanel"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="Label" type="Label" parent="TimePanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"DayAndNightLabel"
text = "12:00"

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_left = -80.0
offset_top = 129.0
offset_bottom = 147.0

[node name="NormalSpeedButton" type="Button" parent="Control"]
custom_minimum_size = Vector2(26, 18)
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
theme_type_variation = &"DayAndNightButton"
action_mode = 0

[node name="TextureRect" type="TextureRect" parent="Control/NormalSpeedButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3.0
offset_top = -6.0
offset_right = 4.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_02n3b")

[node name="FastSpeedButton" type="Button" parent="Control"]
custom_minimum_size = Vector2(26, 18)
layout_mode = 0
offset_left = 27.0
offset_right = 53.0
offset_bottom = 18.0
theme_type_variation = &"DayAndNightButton"
action_mode = 0

[node name="TextureRect" type="TextureRect" parent="Control/FastSpeedButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -6.0
offset_right = 6.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_02n3b")

[node name="TextureRect2" type="TextureRect" parent="Control/FastSpeedButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -6.0
offset_top = -6.0
offset_right = 1.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_02n3b")

[node name="CheetachSpeedButton" type="Button" parent="Control"]
custom_minimum_size = Vector2(26, 18)
layout_mode = 0
offset_left = 54.0
offset_right = 80.0
offset_bottom = 18.0
theme_type_variation = &"DayAndNightButton"
action_mode = 0

[node name="TextureRect" type="TextureRect" parent="Control/CheetachSpeedButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 2.0
offset_top = -6.0
offset_right = 9.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_02n3b")

[node name="TextureRect2" type="TextureRect" parent="Control/CheetachSpeedButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3.0
offset_top = -6.0
offset_right = 4.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_02n3b")

[node name="TextureRect3" type="TextureRect" parent="Control/CheetachSpeedButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -6.0
offset_right = -1.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_02n3b")

[node name="SeasonPanel" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = -80.0
offset_top = 86.0
offset_bottom = 124.0
theme_type_variation = &"DayAndNightControllerPanel"

[node name="MarginContainer" type="MarginContainer" parent="SeasonPanel"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="Label" type="Label" parent="SeasonPanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"DayAndNightLabel"
text = "春"

[connection signal="pressed" from="Control/NormalSpeedButton" to="." method="_on_normal_speed_button_pressed"]
[connection signal="pressed" from="Control/FastSpeedButton" to="." method="_on_fast_speed_button_pressed"]
[connection signal="pressed" from="Control/CheetachSpeedButton" to="." method="_on_cheetach_speed_button_pressed"]
